# remote-pinetime-bot

./: Cargo.toml  README.md  test.sh  test1.sh  test2.sh
src/: main.rs
