[package]
name = "remote-pinetime-bot"
version = "0.1.0"
authors = ["lupyuen <luppy@appkaki.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
telegram-bot = "0.7"
futures = "0.3"
tokio = { version = "0.2", features = ["macros", "time", "fs"] }
tracing-subscriber = "0.2.12"
tempfile = "3.1.0"
reqwest = "0.10.8"
error-chain = "0.12.4"

[remote-pinetime-bot.crates.indexmap.'1.3.0']
additional_flags = [
    "--cfg=has_std"
]